@@ -136,7 +136,7 @@ class version_info(NamedTuple):
 
 
 __version_info__ = version_info(3, 3, 2, "final", 1)
-__version_time__ = "23 Dec 2025 20:25 UTC"
+__version_time__ = "06 Jan 2026 09:48 UTC"
 __version__ = __version_info__.__version__
 __versionTime__ = __version_time__
 __author__ = "Paul McGuire <ptmcg.gm+pyparsing@gmail.com>"
