@@ -222,6 +222,23 @@ class _GroupConsecutive:
         return self.value
 
 
+def _is_iterable(obj, _str_type=(str, bytes), _iter_exception=Exception):
+    # str's are iterable, but in pyparsing, we don't want to iterate over them
+    if isinstance(obj, _str_type):
+        return False
+
+    try:
+        iter(obj)
+    except _iter_exception:  # noqa
+        return False
+    else:
+        return True
+
+
+def _escape_re_range_char(c: str) -> str:
+    return "\\" + c if c in r"\^-][" else c
+
+
 def _collapse_string_to_ranges(
     s: Union[str, Iterable[str]], re_escape: bool = True
 ) -> str:
@@ -261,14 +278,11 @@ def _collapse_string_to_ranges(
     #   used to generate regex ranges for character sets in the pyparsing.unicode
     #   classes, and these can be _very_ long lists of strings
 
-    def escape_re_range_char(c: str) -> str:
-        return "\\" + c if c in r"\^-][" else c
-
-    def no_escape_re_range_char(c: str) -> str:
-        return c
-
-    if not re_escape:
-        escape_re_range_char = no_escape_re_range_char
+    escape_re_range_char: Callable[[str], str]
+    if re_escape:
+        escape_re_range_char = _escape_re_range_char
+    else:
+        escape_re_range_char = lambda ss: ss
 
     ret = []
 
@@ -326,6 +340,16 @@ def _flatten(ll: Iterable) -> list:
         else:
             ret.append(i)
     return ret
+
+
+def _convert_escaped_numerics_to_char(s: str) -> str:
+    if s == "0":
+        return "\0"
+    if s.isdigit() and len(s) == 3:
+        return chr(int(s, 8))
+    elif s.startswith(("u", "x")):
+        return chr(int(s[1:], 16))
+    return s
 
 
 def make_compressed_re(
@@ -468,16 +492,17 @@ def replaced_by_pep8(compat_name: str, fn: C) -> C:
     return cast(C, _inner)
 
 
+def _to_pep8_name(s: str, _re_sub_pattern=re.compile(r"([a-z])([A-Z])")) -> str:
+    s = _re_sub_pattern.sub(r"\1_\2", s)
+    return s.lower()
+
+
 def deprecate_argument(
     kwargs: dict[str, Any], arg_name: str, default_value=None, *, new_name: str = ""
 ) -> Any:
 
-    def to_pep8_name(s: str, _re_sub_pattern=re.compile(r"([a-z])([A-Z])")) -> str:
-        s = _re_sub_pattern.sub(r"\1_\2", s)
-        return s.lower()
-
     if arg_name in kwargs:
-        new_name = new_name or to_pep8_name(arg_name)
+        new_name = new_name or _to_pep8_name(arg_name)
         warnings.warn(
             f"{arg_name!r} argument is deprecated, use {new_name!r}",
             category=PyparsingDeprecationWarning,
